tests/neg/syntax_pp_unclosed_ifndef.baa
// RUN: expect-fail
// EXPECT: نهاية الملف قبل إغلاق شرط قبلي

#إذا_لم_يعرف غير_موجود
صحيح اختبار() {
    إرجع ٠.
}
